[tool.poetry]
name = "ftlid"
version = "0.1.2"
description = "A small and fast language identification model powered by fastText"
authors = ["Marek Suppa <mr@shu.io>"]
license = "MIT"
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.6"
fasttext = "^0.9.1"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
